Table tb_professionals {
  id uuid [pk]
  nome varchar(100) [not null]
  categoria varchar(20) [not null, note: "BARBEIRO ou TRANCISTA"]
  whatsapp_oficial varchar(20) [unique]
  expediente_inicio time [not null]
  expediente_fim time [not null]
  google_calendar_id varchar(255)
  created_at timestamp
}

Table tb_whatsapp_integrations {
  id uuid [pk]
  professional_id uuid [not null, ref: > tb_professionals.id]
  provider varchar(30) [not null, default: "META_CLOUD_API"]
  meta_business_id varchar(100)
  waba_id varchar(100) [not null]
  phone_number_id varchar(100) [not null, unique]
  display_phone_number varchar(30)
  verified_name varchar(100)
  status varchar(30) [not null, default: "PENDING", note: "PENDING, CONNECTED, ERROR ou DISCONNECTED"]
  access_token_encrypted text
  connected_at timestamp
  created_at timestamp
  updated_at timestamp

  indexes {
    (professional_id, provider) [unique]
    phone_number_id
  }
}

Table tb_servicos {
  id uuid [pk]
  professional_id uuid [not null, ref: > tb_professionals.id]
  nome varchar(100) [not null]
  categoria varchar(50)
  preco decimal(10,2) [not null]
  duracao_minutos integer [not null]
  active boolean
  created_at timestamp
}

Table tb_leads {
  id uuid [pk]
  professional_id uuid [not null, ref: > tb_professionals.id]
  telefone_whatsapp varchar(20) [not null]
  is_bot_active boolean
  current_state varchar(50)
  origem varchar(50)
  context jsonb
  last_interaction timestamp
  created_at timestamp

  indexes {
    (professional_id, telefone_whatsapp) [unique]
  }
}

Table tb_agendamentos {
  id uuid [pk]
  lead_id uuid [not null, ref: > tb_leads.id]
  service_id uuid [not null, ref: > tb_servicos.id]
  professional_id uuid [not null, ref: > tb_professionals.id]
  data_hora_inicio timestamp [not null]
  data_hora_fim timestamp [not null]
  valor_pago decimal(10,2)
  data_confirmacao timestamp
  status varchar(30) [not null, default: "EM_TRIAGEM", note: "EM_TRIAGEM, PENDENTE, CONFIRMADO, CANCELADO ou REMARCAR_PENDENTE"]
  midia_urls text[]
  created_at timestamp

  indexes {
    (professional_id, data_hora_inicio, data_hora_fim)
  }
}

Table tb_blocked_events {
  id uuid [pk]
  professional_id uuid [not null, ref: > tb_professionals.id]
  data_hora_inicio timestamp [not null]
  data_hora_fim timestamp [not null]
  descricao varchar(255)
  created_at timestamp

  indexes {
    (professional_id, data_hora_inicio, data_hora_fim)
  }
}

Table tb_duvidas {
  id uuid [pk]
  lead_id uuid [not null, ref: > tb_leads.id]
  professional_id uuid [not null, ref: > tb_professionals.id]
  mensagem_corpo text [not null]
  created_at timestamp
}

Table tb_whatsapp_webhook_events {
  id uuid [pk]
  professional_id uuid [ref: > tb_professionals.id]
  phone_number_id varchar(100) [not null]
  whatsapp_message_id varchar(255) [not null, unique]
  event_type varchar(80) [not null]
  payload jsonb [not null]
  processed_at timestamp
  created_at timestamp

  indexes {
    phone_number_id
  }
}
